Updated Katana Token demo with SSL instructions. Added machine keys to web.config.

--- a/src/02 Katana Authentication/02b Katana Token Authentication/After/KatanaTokenAuth.RelyingParty/KatanaTokenAuth.RelyingParty.csproj
+++ b/src/02 Katana Authentication/02b Katana Token Authentication/After/KatanaTokenAuth.RelyingParty/KatanaTokenAuth.RelyingParty.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>KatanaTokenAuth.RelyingParty</RootNamespace>
     <AssemblyName>KatanaTokenAuth.RelyingParty</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -126,7 +126,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50858</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:50858/</IISUrl>
+          <IISUrl>https://web.local/KatanaTokenAuth.RelyingParty-After</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
