--- a/src/02 Katana Authentication/02b Katana Token Authentication/After/KatanaTokenAuth.TokenService/KatanaTokenAuth.TokenService.csproj
+++ b/src/02 Katana Authentication/02b Katana Token Authentication/After/KatanaTokenAuth.TokenService/KatanaTokenAuth.TokenService.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>KatanaTokenAuth.TokenService</RootNamespace>
     <AssemblyName>KatanaTokenAuth.TokenService</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -124,7 +124,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50799</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://web.local/KatanaTokenAuth.TokenService-After</IISUrl>
+          <IISUrl>http://localhost:50799/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
